[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "Scheduling"
name = "st-webdb"
version = "0.1.0"

[tool.poetry.dependencies]
mip = "^1.13.0"
pandas = "^1.3.4"
python = "^3.9"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
