[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "Sample"
name = "st-webdb"
version = "0.1.0"

[tool.poetry.dependencies]
mip = "^1.13.0"
python = "^3.7"
streamlit = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
